# giraffe

./: .gitignore  CMakeLists.txt  LICENSE  args_tokenizer.h  conn_consumer.cpp  conn_consumer.h  conn_producer.cpp  conn_producer.h  http_server.cpp  http_server.h  main.cpp  readme.md  system.cpp  system.h
site/: 400.html  403.html  404.html  500.html  501.html
